Doctor listing page
This page lists all  doctors returned from firestore. It also allows the user to make appointments and talk to the doctor if the docotr
is available

--- a/frontend/src/pages/styleSheet.css
+++ b/frontend/src/pages/styleSheet.css
@@ -56,3 +56,11 @@ IonGrid #doctor-state IonLabel {
 #rating {
   font-size: 60px;
 }
+
+.row {
+  float: left;
+  width: 50%;
+}
+table {
+  display: inline-table;
+}
