changes to stylesheet

--- a/frontend/src/pages/styleSheet.css
+++ b/frontend/src/pages/styleSheet.css
@@ -1,6 +1,8 @@
+/*
 * {
   color: rgb(0, 35, 75);
 }
+*/
 IonGrid #doctor-state IonLabel {
   font: 14px sharp-sans-semibold, Arial, sans-serif;
   color: rgb(135, 135, 145);
