--- a/frontend/src/pages/styleSheet.css
+++ b/frontend/src/pages/styleSheet.css
@@ -1,8 +1,7 @@
 /*
 * {
   color: rgb(0, 35, 75);
-}
-*/
+}*/
 IonGrid #doctor-state IonLabel {
   font: 14px sharp-sans-semibold, Arial, sans-serif;
   color: rgb(135, 135, 145);
@@ -66,4 +65,8 @@ IonGrid #doctor-state IonLabel {
 table {
   display: inline-table;
   width: 100%;
+}
+
+#scheduleTable {
+  font-size: 8px;
 }
