--- a/frontend/src/pages/styleSheet.css
+++ b/frontend/src/pages/styleSheet.css
@@ -47,6 +47,9 @@ IonGrid #doctor-state IonLabel {
   margin-block-start: 0.83em;
   font-weight: 700;
 }
+#zmmtg-root {
+  display: none;
+}
 
 .heading.heading {
   font: 16px sharp-sans-semibold, Arial, sans-serif;
