changes for opening page

--- a/frontend/src/pages/styleSheet.css
+++ b/frontend/src/pages/styleSheet.css
@@ -87,3 +87,9 @@ table {
 #admin #heading {
   font-weight: bold;
 }
+
+#AppTitle {
+  font-weight: bold;
+  font-size: 56px;
+  font-family: Copperplate, Papyrus, fantasy;
+}
