changes for bugs

--- a/frontend/src/pages/styleSheet.css
+++ b/frontend/src/pages/styleSheet.css
@@ -91,5 +91,5 @@ table {
 #AppTitle {
   font-weight: bold;
   font-size: 56px;
-  font-family: Copperplate, Papyrus, fantasy;
+  font-family: Papyrus;
 }
