--- a/frontend/src/pages/styleSheet.css
+++ b/frontend/src/pages/styleSheet.css
@@ -93,3 +93,31 @@ table {
   font-size: 56px;
   font-family: Papyrus;
 }
+
+IonIcon {
+  pointer-events: none;
+}
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 200px;
+
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: -1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
