--- a/frontend/src/pages/styleSheet.css
+++ b/frontend/src/pages/styleSheet.css
@@ -17,7 +17,7 @@ IonGrid #doctor-state IonLabel {
   font-weight: 700;
 }
 #doctor-name {
-  font: 20px / 24px sharp-sans-bold, Arial, sans-serif;
+  font: 24px sharp-sans-bold, Arial, sans-serif;
   font-weight: bold;
   font-size: 2em;
 }
@@ -40,12 +40,19 @@ IonGrid #doctor-state IonLabel {
 }
 .EBinfor.EBinfor {
   font: 14px sharp-sans-semibold, Arial, sans-serif;
-  margin-block-start: 0.2em;
+  margin-block-start: 0.1em;
 }
 .sub-heading.sub-heading {
   font: 14px sharp-sans-semibold, Arial, sans-serif;
   margin-block-start: 0.83em;
   font-weight: 700;
+}
+.reviews.reviews {
+  margin-block-start: 0.1em;
+}
+
+.ratingsInfo.ratingsInfo {
+  margin-block-start: 0.1em;
 }
 #zmmtg-root {
   display: none;
@@ -120,4 +127,7 @@ IonIcon {
 
 .tooltip:hover .tooltiptext {
   visibility: visible;
+}
+.my-custom-class {
+  font-size: 12px;
 }
